# retry

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  aclocal.m4  config.h.in  configure.ac  repeat.c  repeat.spec.in  retry.1  retry.c  retry.spec.in
.github/: FUNDING.yml
.github/workflows/: full-check.yml
debian/: changelog  control  copyright  files  install  manpages
